# CADmium2

./: README.md  asset-manifest.json  index.html
cadmium/: .gitignore  Cargo.toml
cadmium-js/: Cargo.toml  README.md
cadmium-js/src/: common.rs  lib.rs  lib_old_copy.rs  project.rs  sketch.rs  workbench.rs
cadmium-spa/: README.md  main.js  notes.txt  package-lock.json  package.json
cadmium-spa/public/: index.html
cadmium-spa/src/: App.css  App.js  AssemblyPane.js  AssemblyView.js  MainViewport.js  MainWindow.js  WorkbenchPane.js  WorkbenchView.js  old_example_code.js  positions.txt  utils.js
cadmium/src/: assembly.rs  common.rs  lib.rs  main.rs  project.rs  sketch.rs  workbench.rs
cadmium/src/sketch/: mod.rs
experiments/: face_finder.py
hello-wasm/: Cargo.toml  README.md
hello-wasm/src/: lib.rs
static/css/: main.6aee609b.css  main.6aee609b.css.map  main.bc4e3a1a.css  main.bc4e3a1a.css.map  main.eb631f0f.css  main.eb631f0f.css.map
static/js/: 787.11f74825.chunk.js  787.11f74825.chunk.js.map  main.0437f851.js  main.42b9b2b3.js  main.42b9b2b3.js.map  main.6e0cde75.js  main.834c3a6f.js  main.86c28c74.js  main.86c28c74.js.map  main.8a48acaf.js  main.8a48acaf.js.map  main.b22e953a.js  main.b22e953a.js.LICENSE.txt  main.b5730778.js  main.b5730778.js.LICENSE.txt  main.bf793899.js  main.bf793899.js.map  main.c3d49837.js  main.c3d49837.js.map  main.d08b7153.js  main.d08b7153.js.map  main.d08f1d98.js  main.d08f1d98.js.map
static/media/: cadmium_js_bg.0a9e29caa016ce2f4bca.wasm  cadmium_js_bg.0cc64c36f258d668968d.wasm  cadmium_js_bg.35235fe6f03c336103f7.wasm  cadmium_js_bg.4b22fa525d0559c5769d.wasm  cadmium_js_bg.a47f85dd5d18c58f9423.wasm  cadmium_js_bg.d02f158ecc18f62024c6.wasm  cadmium_js_bg.dbdf6fa1a66d89a0bfe3.wasm  cadmium_js_bg.deef2593d1d9f82c6932.wasm  truck_js_bg.8737608510e2aeb33984.wasm  (+2 more)
