[package]
name = "cadmium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
truck-modeling = "0.5.1"
truck-meshalgo = "0.3.0"
num-complex = "0.4.3"
geo = "0.24.1"
serde = { version = "1.0", features = ["derive"] }