[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Matt Ferraro <mattferraro.dev@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT"
repository = "https://github.com/mattferraro/CADmium2"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]